--- a/Laragon/ecommerce_portal/public/assets/css/style.css
+++ b/Laragon/ecommerce_portal/public/assets/css/style.css
@@ -2,18 +2,18 @@
     background-color: #0066CC;
 }
 
-.theme-navbar-light{
-    background-color: #add1f5;
-}
+.theme-navbar-light{  
+    background-color: #8dc6ff;
+}  
 
 .theme-orange-btn{
     background-color: #FF6600;
 }
-
+  
 .theme-orange-btn:hover{
     background-color: #FF6600;
     opacity: 0.9;
-}
+}  
 
 .theme-green-btn{
     background-color: #28A745;
@@ -35,6 +35,7 @@
 body {
     font-family: 'Lato', sans-serif;
   }
+
 .checked{
     color: #FF6600;
 }
